--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: library
+    issue:
+      max_allowed-books: 3
+
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
@@ -11,4 +14,5 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
 
