--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,6 +5,7 @@ spring:
       max_allowed-books: 3
 
   datasource:
+#    url: jdbc:postgresql://192.168.1.74:5432/postgres
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: postgres
